<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QA</string>
    <string name="title_activity_answer_question">AnswerQuestion</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home</string>
    <string name="view_questions">View Questions</string>
    <string name="view_quizzes">View Quizzes</string>
    <string name="create_question">Create Question</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="title_activity_view_questions">View Questions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_quizzes">View Quizzes</string>
    <string name="title">Title</string>
    <string name="question">Question</string>
    <string name="optional">Optional</string>
    <string name="enter_your_question">Enter Your Question</string>
    <string name="answer_type">Answer Type</string>
    <string name="scale">Scale</string>
    <string name="yes_no">Yes/No</string>
    <string name="question_in">This Question is in</string>
    <string name="add_to_quizzes">Add To Quiz(es)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="record_question">Record Question</string>
    <string name="playback">Playback</string>
    <string name="deleteAudio">Delete</string>
    <string name="record">Record</string>
    <string name="submitQuestion">Add</string>
    <string name="title_activity_create_question">Create Question</string>
    <string name="title_activity_create_quiz">Create Quiz</string>
    <string name="quizName">Quiz Name</string>
    <string name="done">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_question_to_quiz">Add Question</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="capitalized_no">NO</string>
    <string name="capitalized_yes">YES</string>
    <string name="next_button_text">Next&gt;</string>
    <string name="back_button_text">&lt;Back</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="title_activity_answer_single_question">AnswerSingleQuestionActivity</string>
    <string name="title_activity_see_answers">SeeAnswersActivity</string>
    <string name="see_answers">View Answers</string>
    <string name="title_activity_display_question_answer">DisplayQuestionAnswer</string>

</resources>