<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item
        android:id="@+id/home_item"
        android:showAsAction="always"
        android:title="@string/home"/>
    
    <item
        android:id="@+id/create_question_item"
        android:showAsAction="always"
        android:title="@string/create_question" />
    
    <item
        android:id="@+id/view_questions_item"
        android:showAsAction="always"
        android:title="@string/view_questions" />
    
    <item
        android:id="@+id/create_quiz_item"
        android:showAsAction="always"
        android:title="@string/create_quiz" />
    
    <item
        android:id="@+id/view_quizzes_item"
        android:showAsAction="always"
        android:title="@string/view_quizzes" />
    

</menu>