<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- ACTION BAR START -->
    <item
        android:id="@+id/add_question_to_quiz"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/add_question_to_quiz"/>
    <item
        android:id="@+id/save_quiz"
        android:icon="@drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/save_quiz"/>
    <!-- ACTION BAR END -->
    <item
        android:id="@+id/view_quizzes_item"
        android:showAsAction="never"
        android:title="@string/view_quizzes"/>
    <item
        android:id="@+id/create_question_item"
        android:showAsAction="never"
        android:title="@string/create_question"/>
    <item
        android:id="@+id/view_questions_item"
        android:showAsAction="never"
        android:title="@string/view_questions"/>

</menu>