<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"/>
    
    <item 
        android:id="@+id/view_questions"
        android:orderInCategory="100"
        android:title="@string/view_questions" />
    
    <item
        android:id="@+id/view_quizes"
        android:orderInCategory="100"
        android:title="@string/view_quizzes" />
    
    <item
        android:id="@+id/create_question"
        android:orderInCategory="100"
        android:title="@string/create_question" />
	<item
        android:id="@+id/add"
    	android:orderInCategory="2"
    	android:icon="@drawable/add_icon"
    	android:showAsAction="ifRoom"/>
</menu>